sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:9: error: missing arguments for method getValeur in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
      	getValeur(ecart) = 11  
        ^